overflow fixed

--- a/stylesIndex.css
+++ b/stylesIndex.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   }
-body{
+html, body{
   overflow-x: hidden;
 
 }
